# chatserver

./: .gitignore  2023211975-宋文浩数据库原理大作业报告.docx  CLAUDE.md  CMakeLists.txt  COMPLETE_RUNNING_GUIDE.md  Dockerfile.nginx  Dockerfile.server  MYSQL_MASTER_SLAVE_REPLICATION_DESIGN.md  MYSQL_MASTER_SLAVE_SETUP.md  PROJECT_SUMMARY.md  README.md  REDIS_CACHING_DESIGN.md  RUNNING_GUIDE.md  UPGRADE_PLAN.md  autobuild.sh  claudeUpdate  configure-better-mirror.sh  configure-docker-mirror.sh  daemon-improved.json  daemon.json  docker-compose-basic.yml  docker-compose-cn.yml  docker-compose-domestic-mirror.yml  docker-compose-domestic.yml  docker-compose-mysql-master-slave.yml  docker-compose-official.yml  docker-compose-redis-sentinel.yml  docker-compose-tencent.yml  docker-compose.yml  final-startup.sh  fix-docker-mirror.sh  mysql-master.conf  mysql-slave.conf  nginx.conf  offline-import-start.sh  redis-sentinel1.conf  redis-sentinel2.conf  redis-sentinel3.conf  run_tests.sh  start-basic-services.sh  (+4 more)
c++_mcp/: HTTP_REQUEST_PROCESSING_FLOW.md  MCP_HTTP_SSE_FLOW.md  MCP_STDIO_SERVER_COMPLETE_FLOW.md  STDIO_PIPE_PROCESSING_FLOW.md  null  pr_body.md
c++_mcp/docs/: HTTP与JSON-RPC协议关系.md  SSE连接与Session管理机制.md  单例模式详解.md  单元测试详解.md  设计模式分析.md
c++_mcp/examples/: server_example.cpp
c++_mcp/test/: prompt_test_insert.cpp
docker/mysql/: init.sql  master.cnf  slave1.cnf  slave2.cnf
docs/: DEPLOYMENT_GUIDE.md  MCP_Server_详细设计文档.md  NGINX_LOAD_BALANCING.md  PERFORMANCE_TUNING.md  TEST_CASES.md
include/server/: chatserver.hpp  chatservice.hpp  proto_msg_handler.h  proto_msg_processor.h
include/server/db/: connection_pool.h  database_router.h  db.h
include/server/kafka/: kafka_consumer.h  kafka_manager.h  kafka_producer.h
include/server/log/: async_logging.h  log_file.h  log_util.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: cache_manager.h  redis.hpp  redis_cache.h  redis_sentinel.h
src/client/: CMakeLists.txt  client_proto.cpp  client_proto.h  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp  proto_msg_handler.cpp  proto_msg_processor.cpp
src/server/db/: connection_pool.cpp  database_router.cpp  db.cpp
src/server/kafka/: kafka_consumer.cpp  kafka_manager.cpp  kafka_producer.cpp
src/server/log/: async_logging.cpp  log_file.cpp
src/server/mcp/: chat_mcp_server.cpp  chat_mcp_server.h
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/proto/: message.proto
src/server/redis/: cache_manager.cpp  redis.cpp  redis_cache.cpp  redis_sentinel.cpp
test/: CMakeLists.txt  performance_test.cpp  protobuf_processor_test.cpp  protobuf_test.cpp  redis_cache_test.cpp
test/testJson/: testJson  testJson.cpp
test/testMuduo/: CMakeLists.txt  muduoServer.cpp
